--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
         minSdkVersion 16
         targetSdkVersion 26
         versionCode 1
-        versionName '1.0.0'
+        versionName '20230829-1341'
         multiDexEnabled true
         //设置room的Schema的位置
         javaCompileOptions {
