--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
+
 # windows thumbnail cache
 Thumbs.db
 # Mac DS_Store Files
 .DS_Store
 # Built application files
 *.apk
-*.aar
+#*.aar
 *.ap_
 *.aab
 
