--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
         minSdkVersion 16
         targetSdkVersion 26
         versionCode 1
-        versionName '20241016-2222'
+        versionName '20241017-2222'
         multiDexEnabled true
         //设置room的Schema的位置
         javaCompileOptions {
@@ -103,4 +103,6 @@ dependencies {
     implementation 'com.github.hedzr:android-file-chooser:v1.2.0-final'
     implementation 'commons-io:commons-io:2.11.0'
     implementation 'com.googlecode.juniversalchardet:juniversalchardet:1.0.3'
+      //工具类
+    implementation 'com.blankj:utilcodex:1.31.0'
 }
