--- a/player/build.gradle
+++ b/player/build.gradle
@@ -3,11 +3,13 @@ plugins {
 }
 
 android {
-    compileSdkVersion 33
+    compileSdkVersion 34
 
     defaultConfig {
-        minSdkVersion 16
-        targetSdkVersion 26
+        minSdkVersion 21
+        targetSdkVersion 28
+        versionCode 1
+        versionName "1.0"
     }
 
     buildTypes {
@@ -27,13 +29,14 @@ android {
 }
 
 dependencies {
-    def exoplayerVersion = "2.18.7"
-    implementation "androidx.annotation:annotation:1.3.0"
-    api "com.google.android.exoplayer:exoplayer-core:$exoplayerVersion"
-    api "com.google.android.exoplayer:exoplayer-dash:$exoplayerVersion"
-    api "com.google.android.exoplayer:exoplayer-hls:$exoplayerVersion"
-    api "com.google.android.exoplayer:exoplayer-rtsp:$exoplayerVersion"
-    api "com.google.android.exoplayer:extension-rtmp:$exoplayerVersion"
-    implementation 'com.squareup.okhttp3:okhttp:3.12.11'
-    api 'xyz.doikki.android.dkplayer:dkplayer-ui:3.3.5'
+     implementation 'androidx.annotation:annotation:1.8.2
+     implementation "androidx.media3:media3-exoplayer:1.3.1"
+     implementation "androidx.media3:media3-ui:1.3.1"
+     implementation "androidx.media3:media3-exoplayer-dash:1.3.1"
+     implementation "androidx.media3:media3-exoplayer-hls:1.3.1"
+     implementation "androidx.media3:media3-exoplayer-rtsp:1.3.1"
+     implementation "androidx.media3:media3-datasource-rtmp:1.3.1"
+     implementation 'androidx.media3:media3-common:1.3.1'
+     implementation 'com.squareup.okhttp3:okhttp:3.12.11'
+     api 'xyz.doikki.android.dkplayer:dkplayer-ui:3.3.5'
 }
