--- a/player/build.gradle
+++ b/player/build.gradle
@@ -29,7 +29,7 @@ android {
 }
 
 dependencies {
-     implementation 'androidx.annotation:annotation:1.8.2
+     implementation 'androidx.annotation:annotation:1.8.2'
      implementation "androidx.media3:media3-exoplayer:1.3.1"
      implementation "androidx.media3:media3-ui:1.3.1"
      implementation "androidx.media3:media3-exoplayer-dash:1.3.1"
