--- a/player/build.gradle
+++ b/player/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     api "com.google.android.exoplayer:exoplayer-hls:$exoplayerVersion"
     api "com.google.android.exoplayer:exoplayer-rtsp:$exoplayerVersion"
     api "com.google.android.exoplayer:extension-rtmp:$exoplayerVersion"
+    api "com.google.android.exoplayer:exoplayer-okhttp:$exoplayerVersion"
     implementation 'com.squareup.okhttp3:okhttp:3.12.11'
     api 'xyz.doikki.android.dkplayer:dkplayer-ui:3.3.5'
 }
