--- a/player/build.gradle
+++ b/player/build.gradle
@@ -33,13 +33,13 @@ android {
 
 dependencies {
     implementation "androidx.annotation:annotation:1.3.0"
-    def exoplayerVersion = "2.16.0"
+    def exoplayerVersion = "2.18.7"
     api "com.google.android.exoplayer:exoplayer-core:$exoplayerVersion"
     api "com.google.android.exoplayer:exoplayer-dash:$exoplayerVersion"
     api "com.google.android.exoplayer:exoplayer-hls:$exoplayerVersion"
     api "com.google.android.exoplayer:exoplayer-rtsp:$exoplayerVersion"
     api "com.google.android.exoplayer:extension-rtmp:$exoplayerVersion"
-    api "com.google.android.exoplayer:extension-okhttp:2.14.2"  //xuameng解决BILI EXO不能播放
+    api "com.google.android.exoplayer:extension-okhttp:$exoplayerVersion"  //xuameng解决BILI EXO不能播放
     implementation 'com.squareup.okhttp3:okhttp:3.12.11'      
     api 'xyz.doikki.android.dkplayer:dkplayer-ui:3.3.5'
 }
