--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-
+apply plugin: 'org.jetbrains.kotlin.android'
 android {
     compileSdkVersion 30
 
@@ -8,7 +8,7 @@ android {
         minSdkVersion 16
         targetSdkVersion 26
         versionCode 1
-        versionName '20241023-2222'
+        versionName '20241019-2222'
         multiDexEnabled true
         //设置room的Schema的位置
         javaCompileOptions {
@@ -63,7 +63,7 @@ dependencies {
 
 
     implementation 'org.nanohttpd:nanohttpd:2.3.1'
-    implementation 'com.google.zxing:core:3.3.0'
+    implementation 'com.google.zxing:core:3.4.1'
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
@@ -71,7 +71,10 @@ dependencies {
     implementation files('libs/thunder.jar')
     implementation files('libs/commons-lang3-3.12.0.jar')
     implementation files('libs/xwalk_shared_library-23.53.589.4.aar')
-
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.5.31"
+    implementation 'androidx.core:core-ktx:1.6.0'
+    implementation 'net.sourceforge.streamsupport:android-retrofuture:1.7.4'
     implementation 'com.squareup.okhttp3:okhttp:3.12.11'
     annotationProcessor 'androidx.room:room-compiler:2.3.0'
     implementation 'androidx.room:room-runtime:2.3.0'
