--- a/player/build.gradle
+++ b/player/build.gradle
@@ -3,19 +3,16 @@ plugins {
 }
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 33
 
     defaultConfig {
         minSdkVersion 16
         targetSdkVersion 26
+        versionCode 1
+        versionName "1.0"
     }
 
     buildTypes {
-        all {
-            ndk {
-                abiFilters 'armeabi-v7a'
-            }
-        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
@@ -32,14 +29,14 @@ android {
 }
 
 dependencies {
+    def exoplayerVersion = "2.18.7"
     implementation "androidx.annotation:annotation:1.3.0"
-    def exoplayerVersion = "2.16.0"
     api "com.google.android.exoplayer:exoplayer-core:$exoplayerVersion"
     api "com.google.android.exoplayer:exoplayer-dash:$exoplayerVersion"
     api "com.google.android.exoplayer:exoplayer-hls:$exoplayerVersion"
     api "com.google.android.exoplayer:exoplayer-rtsp:$exoplayerVersion"
     api "com.google.android.exoplayer:extension-rtmp:$exoplayerVersion"
     api "com.google.android.exoplayer:extension-okhttp:2.14.2"  //xuameng解决BILI EXO不能播放
-    implementation 'com.squareup.okhttp3:okhttp:3.12.11'      
+    implementation 'com.squareup.okhttp3:okhttp:3.12.11'
     api 'xyz.doikki.android.dkplayer:dkplayer-ui:3.3.5'
 }
