--- a/build.gradle
+++ b/build.gradle
@@ -3,15 +3,15 @@ buildscript {
     ext.kotlin_version = '1.5.31'
     repositories {
         gradlePluginPortal()
-        maven { url "https://maven.aliyun.com/repository/releases" }
-        maven { url "https://maven.aliyun.com/repository/public" }
         google()
         mavenCentral()
         maven { url "https://jitpack.io" }
+        maven { url "https://maven.aliyun.com/repository/releases" }
+        maven { url "https://maven.aliyun.com/repository/public" }
+        maven { url "https://storage.googleapis.com/r8-releases/raw" }
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.2.2"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.android.tools.build:gradle:4.2.2'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -20,17 +20,12 @@ buildscript {
 
 allprojects {
     repositories {
-        gradlePluginPortal()
-        maven { url "https://maven.aliyun.com/repository/releases" }
-        maven { url "https://maven.aliyun.com/repository/public" }
-        //dlna-cast中cling仓
-        maven {
-            url 'http://4thline.org/m2'
-            allowInsecureProtocol true
-        }
-        maven { url "https://jitpack.io" }
         google()
         mavenCentral()
+        maven { url "https://jitpack.io" }
+        maven { url "https://maven.aliyun.com/repository/releases" }
+        maven { url "https://maven.aliyun.com/repository/public" }
+        gradlePluginPortal()
     }
 }
 
