--- a/quickjs/build.gradle
+++ b/quickjs/build.gradle
@@ -3,14 +3,44 @@ plugins {
 }
 
 android {
-    compileSdk 33
+//    ndkPath = "D:\\Android\\NDK\\android-ndk-r23b\\"
+    compileSdkVersion 33
 
     defaultConfig {
-        minSdk 18
-        targetSdk 28
+        minSdkVersion 18
+        targetSdkVersion 28
+        externalNativeBuild {
+            cmake {
+                abiFilters 'armeabi-v7a'
+            }
+        }
+    }
+
+    buildTypes {
+        all {
+            ndk {
+                abiFilters 'armeabi-v7a'
+            }
+        }
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+
+        debug {
+        }
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    externalNativeBuild {
+        /*cmake {
+            path file('src/main/cpp/CMakeLists.txt')
+            version "3.10.2"
+        }*/
     }
 }
 
 dependencies {
-    
 }
