--- a/player/build.gradle
+++ b/player/build.gradle
@@ -10,6 +10,12 @@ android {
         targetSdkVersion 26
     }
 
+    buildTypes {
+        all {
+            ndk {
+                abiFilters 'armeabi-v7a'
+            }
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
