--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-
+apply plugin: 'org.jetbrains.kotlin.android'
 android {
     compileSdkVersion 30
 
@@ -62,6 +62,7 @@ dependencies {
     api fileTree(dir: "libs", include: ["*.jar"])
 
 
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.5.31"
     implementation 'org.nanohttpd:nanohttpd:2.3.1'
     implementation 'com.google.zxing:core:3.3.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
