--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
-apply plugin: 'org.jetbrains.kotlin.android'
+
 android {
-    compileSdkVersion 33
+    compileSdkVersion 30
 
     defaultConfig {
         applicationId 'com.jvhuiys.player'
-        minSdkVersion 24
-        targetSdkVersion 30
+        minSdkVersion 16
+        targetSdkVersion 26
         versionCode 1
         versionName '20241024-2222'
         multiDexEnabled true
@@ -62,9 +62,8 @@ dependencies {
     api fileTree(dir: "libs", include: ["*.jar"])
 
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.5.31"
     implementation 'org.nanohttpd:nanohttpd:2.3.1'
-    implementation 'com.google.zxing:core:3.4.1'    //XUAMENG
+    implementation 'com.google.zxing:core:3.3.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
@@ -106,7 +105,4 @@ dependencies {
     implementation 'com.googlecode.juniversalchardet:juniversalchardet:1.0.3'
       //工具类
     implementation 'com.blankj:utilcodex:1.31.0'
-
-    implementation 'androidx.core:core-ktx:1.6.0'
-    implementation 'org.conscrypt:conscrypt-android:2.5.2'
 }
