--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,9 @@ buildscript {
         maven { url "https://storage.googleapis.com/r8-releases/raw" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.2'
-
+        classpath 'com.android.tools.build:gradle:7.4.2'
+        classpath("com.android.tools:r8:8.5.35")
+        classpath 'com.yanzhenjie.andserver:plugin:2.1.12'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
