--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,6 +98,7 @@ dependencies {
     implementation "androidx.media3:media3-exoplayer-rtsp:1.3.1"
     implementation "androidx.media3:media3-datasource-rtmp:1.3.1"
     implementation 'androidx.media3:media3-common:1.3.1'
+    implementation "com.github.anilbeesetti.nextlib:nextlib-media3ext:0.5.0"
     
     implementation 'com.lzy.net:okgo:3.0.4'
     // implementation 'com.tencent.bugly:crashreport_upgrade:latest.release'
