--- a/player/build.gradle
+++ b/player/build.gradle
@@ -33,6 +33,10 @@ android {
 
 dependencies {
     implementation "androidx.annotation:annotation:1.3.0"
+
+    compileOnly 'org.checkerframework:checker-compat-qual:3.8.0'
+    compileOnly 'org.checkerframework:checker-qual:3.8.0'
+    
     def exoplayerVersion = "2.16.0"
     api "com.google.android.exoplayer:exoplayer-core:$exoplayerVersion"
     api "com.google.android.exoplayer:exoplayer-dash:$exoplayerVersion"
