--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
         maven { url "https://maven.aliyun.com/repository/releases" }
         maven { url "https://maven.aliyun.com/repository/public" }
         maven { url "https://storage.googleapis.com/r8-releases/raw" }
+        maven { url "https://checkerframework.org/ajava/repo" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.2.2'
