--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ allprojects {
         maven { url "https://jitpack.io" }
         maven { url "https://maven.aliyun.com/repository/releases" }
         maven { url "https://maven.aliyun.com/repository/public" }
+        maven { url "https://checkerframework.org/ajava/repo" }
         gradlePluginPortal()
     }
 }
