--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,4 +105,12 @@ dependencies {
     implementation 'com.googlecode.juniversalchardet:juniversalchardet:1.0.3'
       //工具类
     implementation 'com.blankj:utilcodex:1.31.0'
+    //xuameng exo
+    def exoplayerVersion = "2.16.0"
+    api "com.google.android.exoplayer:exoplayer-core:$exoplayerVersion"
+    api "com.google.android.exoplayer:exoplayer-dash:$exoplayerVersion"
+    api "com.google.android.exoplayer:exoplayer-hls:$exoplayerVersion"
+    api "com.google.android.exoplayer:exoplayer-rtsp:$exoplayerVersion"
+    api "com.google.android.exoplayer:extension-rtmp:$exoplayerVersion"
+    api "com.google.android.exoplayer:extension-okhttp:2.14.2"  //xuameng解决BILI EXO不能播放
 }
