--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,10 +105,11 @@ dependencies {
       //工具类
     implementation 'com.blankj:utilcodex:1.31.0'
     //xuameng exo
-    def exoplayerVersion = "2.19.0"
+    def exoplayerVersion = "2.16.0"
     api "com.google.android.exoplayer:exoplayer-core:$exoplayerVersion"
     api "com.google.android.exoplayer:exoplayer-dash:$exoplayerVersion"
     api "com.google.android.exoplayer:exoplayer-hls:$exoplayerVersion"
     api "com.google.android.exoplayer:exoplayer-rtsp:$exoplayerVersion"
     api "com.google.android.exoplayer:extension-rtmp:$exoplayerVersion"
+    api "com.google.android.exoplayer:extension-okhttp"  //xuameng解决BILI EXO不能播放
 }
