--- a/app/build.gradle
+++ b/app/build.gradle
@@ -111,4 +111,6 @@ dependencies {
     api "com.google.android.exoplayer:exoplayer-rtsp:2.14.2"
     api "com.google.android.exoplayer:extension-rtmp:2.14.2"
     api "com.google.android.exoplayer:extension-okhttp:2.14.2"
+    //xuameng exo ffmepg
+    compileOnly 'org.checkerframework:checker-qual:3.4.0'
 }
