--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 33
+    compileSdkVersion 30
 
     defaultConfig {
         applicationId 'com.jvhuiys.player'
-        minSdkVersion 21
-        targetSdkVersion 28
+        minSdkVersion 16
+        targetSdkVersion 26
         versionCode 1
         versionName '20241028-2222'
         multiDexEnabled true
@@ -104,15 +104,11 @@ dependencies {
     implementation 'com.googlecode.juniversalchardet:juniversalchardet:1.0.3'
       //工具类
     implementation 'com.blankj:utilcodex:1.31.0'
-    implementation "androidx.annotation:annotation:1.3.0"
     //xuameng exo
-    def exoplayerVersion = "2.18.7"
-    api "com.google.android.exoplayer:exoplayer-core:$exoplayerVersion"
-    api "com.google.android.exoplayer:exoplayer-dash:$exoplayerVersion"
-    api "com.google.android.exoplayer:exoplayer-hls:$exoplayerVersion"
-    api "com.google.android.exoplayer:exoplayer-rtsp:$exoplayerVersion"
-    api "com.google.android.exoplayer:extension-rtmp:$exoplayerVersion"
-    api "com.google.android.exoplayer:extension-okhttp:$exoplayerVersion"
-    //xuameng exo ffmepg
-    compileOnly 'org.checkerframework:checker-qual:3.4.0'
+    api "com.google.android.exoplayer:exoplayer-core:2.14.2"
+    api "com.google.android.exoplayer:exoplayer-dash:2.14.2"
+    api "com.google.android.exoplayer:exoplayer-hls:2.14.2"
+    api "com.google.android.exoplayer:exoplayer-rtsp:2.14.2"
+    api "com.google.android.exoplayer:extension-rtmp:2.14.2"
+    api "com.google.android.exoplayer:extension-okhttp:2.14.2"
 }
