--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,8 +5,8 @@ android {
 
     defaultConfig {
         applicationId 'com.jvhuiys.player'
-        minSdkVersion 24
-        targetSdkVersion 30
+        minSdkVersion 21
+        targetSdkVersion 28
         versionCode 1
         versionName '20241028-2222'
         multiDexEnabled true
@@ -112,5 +112,5 @@ dependencies {
     api "com.google.android.exoplayer:exoplayer-hls:$exoplayerVersion"
     api "com.google.android.exoplayer:exoplayer-rtsp:$exoplayerVersion"
     api "com.google.android.exoplayer:extension-rtmp:$exoplayerVersion"
-//    api "com.google.android.exoplayer:extension-okhttp:$exoplayerVersion"
+    api "com.google.android.exoplayer:extension-okhttp:$exoplayerVersion"
 }
