--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 33
+    compileSdkVersion 34
 
     defaultConfig {
         applicationId 'com.jvhuiys.player'
@@ -71,6 +71,9 @@ dependencies {
     implementation files('libs/commons-lang3-3.12.0.jar')
     implementation files('libs/xwalk_shared_library-23.53.589.4.aar')
 
+    implementation('com.github.thegrizzlylabs:sardine-android:0.8') {
+        exclude group: 'com.squareup.okhttp3'
+    }
     implementation 'com.squareup.okhttp3:okhttp:3.12.11'
     annotationProcessor 'androidx.room:room-compiler:2.3.0'
     implementation 'androidx.room:room-runtime:2.3.0'
