--- a/player/build.gradle
+++ b/player/build.gradle
@@ -3,11 +3,11 @@ plugins {
 }
 
 android {
-    compileSdkVersion 33
+    compileSdkVersion 34
 
     defaultConfig {
-        minSdkVersion 16
-        targetSdkVersion 26
+        minSdkVersion 21
+        targetSdkVersion 28
     }
 
     buildTypes {
@@ -33,6 +33,6 @@ android {
 
 dependencies {
     implementation "androidx.annotation:annotation:1.3.0"
-//    implementation 'com.squareup.okhttp3:okhttp:3.12.11'      
+    implementation 'com.squareup.okhttp3:okhttp:3.12.11'      
     api 'xyz.doikki.android.dkplayer:dkplayer-ui:3.3.5'
 }
