--- a/player/build.gradle
+++ b/player/build.gradle
@@ -35,4 +35,13 @@ dependencies {
     implementation "androidx.annotation:annotation:1.3.0"
     implementation 'com.squareup.okhttp3:okhttp:3.12.11'      
     api 'xyz.doikki.android.dkplayer:dkplayer-ui:3.3.5'
+    //xuameng exo
+    def exoplayerVersion = "2.18.7"
+    implementation "androidx.annotation:annotation:1.3.0"
+    api "com.google.android.exoplayer:exoplayer-core:$exoplayerVersion"
+    api "com.google.android.exoplayer:exoplayer-dash:$exoplayerVersion"
+    api "com.google.android.exoplayer:exoplayer-hls:$exoplayerVersion"
+    api "com.google.android.exoplayer:exoplayer-rtsp:$exoplayerVersion"
+    api "com.google.android.exoplayer:extension-rtmp:$exoplayerVersion"
+    api "com.google.android.exoplayer:extension-okhttp:$exoplayerVersion"
 }
