--- a/player/build.gradle
+++ b/player/build.gradle
@@ -38,10 +38,10 @@ dependencies {
     //xuameng exo
     def exoplayerVersion = "2.18.7"
     implementation "androidx.annotation:annotation:1.3.0"
-    api "com.google.android.exoplayer:exoplayer-core:$exoplayerVersion"
-    api "com.google.android.exoplayer:exoplayer-dash:$exoplayerVersion"
-    api "com.google.android.exoplayer:exoplayer-hls:$exoplayerVersion"
-    api "com.google.android.exoplayer:exoplayer-rtsp:$exoplayerVersion"
-    api "com.google.android.exoplayer:extension-rtmp:$exoplayerVersion"
-    api "com.google.android.exoplayer:extension-okhttp:$exoplayerVersion"
+    implementation "com.google.android.exoplayer:exoplayer-core:2.18.7"
+    implementation "com.google.android.exoplayer:exoplayer-dash:2.18.7"
+    implementation "com.google.android.exoplayer:exoplayer-hls:2.18.7"
+    implementation "com.google.android.exoplayer:exoplayer-rtsp:2.18.7"
+    implementation "com.google.android.exoplayer:extension-rtmp:2.18.7"
+    implementation 'com.google.android.exoplayer:extension-okhttp:2.18.7"
 }
