--- a/player/build.gradle
+++ b/player/build.gradle
@@ -37,11 +37,9 @@ dependencies {
     api 'xyz.doikki.android.dkplayer:dkplayer-ui:3.3.5'
     //xuameng exo
     def exoplayerVersion = "2.18.7"
-    implementation "androidx.annotation:annotation:1.3.0"
-    implementation "com.google.android.exoplayer:exoplayer-core:2.18.7"
-    implementation "com.google.android.exoplayer:exoplayer-dash:2.18.7"
-    implementation "com.google.android.exoplayer:exoplayer-hls:2.18.7"
-    implementation "com.google.android.exoplayer:exoplayer-rtsp:2.18.7"
-    implementation "com.google.android.exoplayer:extension-rtmp:2.18.7"
-    implementation 'com.google.android.exoplayer:extension-okhttp:2.18.7"
+    api "com.google.android.exoplayer:exoplayer-core:$exoplayerVersion"
+    api "com.google.android.exoplayer:exoplayer-dash:$exoplayerVersion"
+    api "com.google.android.exoplayer:exoplayer-hls:$exoplayerVersion"
+    api "com.google.android.exoplayer:exoplayer-rtsp:$exoplayerVersion"
+    api "com.google.android.exoplayer:extension-rtmp:$exoplayerVersion"
 }
