--- a/build.gradle
+++ b/build.gradle
@@ -5,13 +5,14 @@ buildscript {
         gradlePluginPortal()
         google()
         mavenCentral()
-        maven { url "https://www.jitpack.io" }
+        maven { url "https://jitpack.io" }
         maven { url "https://maven.aliyun.com/repository/releases" }
         maven { url "https://maven.aliyun.com/repository/public" }
         maven { url "https://storage.googleapis.com/r8-releases/raw" }
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.2.2"
+   //     classpath "com.android.tools.build:gradle:7.2.2"
+	classpath 'com.android.tools.build:gradle:4.2.2'
 	classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -22,7 +23,7 @@ allprojects {
     repositories {
         google()
         mavenCentral()
-        maven { url "https://www.jitpack.io" }
+        maven { url "https://jitpack.io" }
         maven { url "https://maven.aliyun.com/repository/releases" }
         maven { url "https://maven.aliyun.com/repository/public" }
         gradlePluginPortal()
